# envelope

./: .gitignore  CMakeLists.txt  ImGuiEnvelopeEditor.cpp  ImGuiFileBrowser.cpp  ImGuiFileBrowser.h  envelope.c  envelope.h  envelope_editor.cpp  imguiCMakeLists.txt
testdata/: test_1.bp
tests/: tests.c
